Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         document.getElementById('submit').addEventListener('click', checkAnswer);
         document.getElementById('close-leaderboard').addEventListener('click', () => {
             document.getElementById('leaderboards').style.display = 'none';
-            // Reset game
+            // Reset the game
             board = Array(9).fill(null);
             movesAvailable = 0;
             correctAnswers = 0;
@@ -316,3 +316,4 @@
     </script>
 </body>
 </html>
+
